syntax = "proto3";

option java_package = "transport.grpc";

package protobuf;

message Command {
    string cmdType = 1;
    string op = 2;
    string key = 3;
    string value = 4;
}

message LogEntry {
    int64 term = 1;
    int64 index = 2;
    string timestamp = 3;
    Command cmd = 4;
}

message RequestVoteRequest {
    int64 term = 1;
    int64 lastLogIndex = 2;
    int64 lastLogTerm = 3;
    string candicateId = 4;
}

message AppendEntriesRequest {
    int64 term = 1;
    int64 prevLogTrem = 2;
    int64 prevLogIndex = 3;
    int64 leaderCommit = 4;
    string leaderId = 5;
    repeated LogEntry entries = 6;
}

message RequestVoteResponse {
    int64 term = 1;
    bool voteGranted = 2;
}

message AppendEntriesResponse {
    bool success = 1;
    int64 term = 2;
    int64 currentLogIndex = 3;
    int64 commitIndex = 4;
    string nodeId = 5;
}

service RaftService {
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
}

